# dvdrental_analysis

./: README.md  main.py  pyproject.toml
notebooks/: sql.ipynb
src/: dashboard.py  readme.py
src/utils/: setup.sh
